<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <Button
            android:text="@string/help"
            android:id="@+id/b"
            android:textSize="17sp"
            android:textColor="@color/text"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textAllCaps="false" />

        <Switch
            android:id="@+id/s1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service_state" />



        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow>

                <TextView
                    android:gravity="center"
                    android:text="@string/sample_rate" />

                <EditText
                    android:id="@+id/e1"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="200"
                    android:inputType="number"
                    android:selectAllOnFocus="true" />
            </TableRow>

            <SeekBar
                android:id="@+id/sb1"
                android:layout_marginBottom="20dp"
                android:min="10"
                android:max="250" />
        </TableLayout>

        <Switch
            android:id="@+id/s2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_notification" />

        <Switch
            android:id="@+id/s3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_notification" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

                <TableRow>

                    <TextView
                        android:gravity="center"
                        android:text="@string/update_interval" />

                    <EditText
                        android:id="@+id/e2"
                        android:background="@null"
                        android:gravity="center"
                        android:hint="1"
                        android:inputType="number"
                        android:selectAllOnFocus="true" />
                </TableRow>

                <SeekBar
                    android:id="@+id/sb2"
                    android:layout_marginBottom="20dp"
                    android:min="1"
                    android:max="5" />

            </TableLayout>

        </LinearLayout>

        <Switch
            android:id="@+id/s4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hide_recent" />

    </LinearLayout>

</ScrollView>